--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Date Calculator</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script defer src="script.js"></script>
+    <script defer src="index.js"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="w-full max-w-4xl mx-auto p-6 bg-white shadow-md rounded">
